--- a/react-dine-frontend/src/components/CheckoutForm.css
+++ b/react-dine-frontend/src/components/CheckoutForm.css
@@ -1,5 +1,18 @@
+.container {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start
+}
+
+.checkoutsummary {
+    background-color: rgb(214, 166, 103);
+    border-radius: 10px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    padding: 10px;
+}
+
 .checkoutform {
-    background-color: rgb(209, 137, 55);
+    background-color: rgb(214, 166, 103);
     border-radius: 10px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 5px;
