--- a/react-dine-frontend/src/components/CartModal.css
+++ b/react-dine-frontend/src/components/CartModal.css
@@ -3,7 +3,7 @@
     left: 0;
     width: 100vw;
     height: 60vw;
-    background: linear-gradient(68.6deg, rgba(252, 165, 241, 0.5) 1.8%, rgba(181, 255, 255, 0.5) 100.5%);
+    background: linear-gradient(68.6deg, rgba(255, 111, 60, 0.8) 1.8%, rgba(255, 201, 60, 0.8) 100.5%);
     position: fixed;
     display: flex;
     justify-content: center;
@@ -13,8 +13,9 @@
 .cart-modal-container {
     width: 400px;
     height: 300px;
-    background: linear-gradient(68.6deg, rgb(252, 165, 241) 1.8%, rgb(181, 255, 255) 100.5%);
-
+    background: linear-gradient(68.6deg, rgb(255, 111, 60) 1.8%, rgb(255, 201, 60) 100.5%);
+    color: #1a1a1a;
+    font-size: 20px;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     border: 2px solid black;
