--- a/react-dine-frontend/src/components/Dishes.css
+++ b/react-dine-frontend/src/components/Dishes.css
@@ -1,6 +1,5 @@
 
 ul {
-    margin-top: 10%;
     position: relative;
     list-style: none;
     display: flex;
@@ -15,7 +14,7 @@ ul {
     margin: 2%;
     border: 2px solid black;
     border-radius: 10px;
-    background-color: #222831;
+    background-color: var(--dark);
     
     transform-style: preserve-3d;
     transition: all 0.8s ease; 
