--- a/react-dine-frontend/src/components/Header.css
+++ b/react-dine-frontend/src/components/Header.css
@@ -1,35 +1,49 @@
 
 
-.headercontainer {
-    /*FONTSIZE*/
-    position: fixed;
-    top: 0;
-    left: 0;
+.header-container {
+    position: sticky;
     width: 100%;
-    z-index: 1000;
-    background-color: rgb(46, 31, 59);
-    display:flex;
-    justify-content: center;
-    gap: 50px;
-    align-items: baseline;
-    opacity: 92%;
-}
-
-.cartandtotal {
-    position: relative;
-}
-
-.totalnumber {
-    font-size: 12px;
+    left: 0;
+    top: 0;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    height: 50%;
-    width: 60%;
-    position: absolute;
-    bottom: 30%;
-    left: 100%;
-    background-color: rgb(175, 100, 15);
-    border-radius: 20px;
-    z-index: -1;
+    gap: 20px;
+    z-index: 1000;
+}
+
+.header-title {
+    font-size: 24px;
+    text-shadow: 0 0 3px var(--black), 0 0 7px #092f75;
+}
+
+.header-cart {
+    position: relative;
+    color: var(--black);
+    font-size: 20px;
+    top: 56px;
+    display: flex;
+    height: 40px;
+    padding: 5px;
+    border-radius: 50px;
+    background-color: var(--black);
+    border: 2px solid var(--yellow);
+}
+
+.header-number {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    top: 90px;
+    right: 36px;
+    border-radius: 50px;
+    border: 2px solid var(--black);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1a1a1a;
+    background-color: #ffc93c;
+}
+
+.header-title h1:hover, .header-cart:hover, .header-cart:hover + .header-number {
+    transform: scale(1.05);
 }
