--- a/react-dine-frontend/src/components/CheckoutForm.css
+++ b/react-dine-frontend/src/components/CheckoutForm.css
@@ -1,38 +1,53 @@
 .container {
     display: flex;
     flex-direction: row-reverse;
-    align-items: flex-start
+    align-items: flex-start;
+    padding-top: 120px;
+    font-weight: 600;
 }
 
-.checkoutsummary {
-    background-color: rgb(214, 166, 103);
+.checkout-summary {
+    background: linear-gradient(68.6deg, rgb(255, 111, 60) 1.8%, rgb(255, 201, 60) 100.5%);
     border-radius: 10px;
+    border: 2px solid var(--black);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 10px;
+    color: var(--black);
 }
 
-.checkoutform {
-    background-color: rgb(214, 166, 103);
+.checkout-form {
+    background: linear-gradient(68.6deg, rgb(255, 201, 60) 1.8%, rgb(255, 111, 60) 100.5%);
     border-radius: 10px;
+    border: 2px solid var(--black);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 5px;
     width: 400px;
+    color: var(--black);
+}
+
+.submit-button {
+    font-size: 34px;
+    margin-bottom: 15px;
+    border-radius: 50px;
+    background-color: var(--orange);
+    color: var(--black);
+    border: 2px dashed var(--black);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .errorMsg {
     max-width: 350px;
     color: #f21e08;
-    padding: 2px 0;
-    margin-top: 2px;
+    margin: 1px;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 600;
 }
 
 .form-control, .form-control-spec {
     display: flex;
     flex-direction: column;
     margin-bottom: 5px;
-    padding: 5px 10px;
+    padding: 0px 15px;
 }
 
 .form-control-spec {
