--- a/react-dine-frontend/src/components/CartModal.css
+++ b/react-dine-frontend/src/components/CartModal.css
@@ -1,8 +1,8 @@
 .cart-modal-bg {
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 60vw;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(68.6deg, rgba(255, 111, 60, 0.8) 1.8%, rgba(255, 201, 60, 0.8) 100.5%);
     position: fixed;
     display: flex;
@@ -11,23 +11,45 @@
 }
 
 .cart-modal-container {
-    width: 400px;
-    height: 300px;
-    background: linear-gradient(68.6deg, rgb(255, 111, 60) 1.8%, rgb(255, 201, 60) 100.5%);
+    width: 420px;
+    height: 450px;
+    background: linear-gradient(68.6deg, rgb(255, 201, 60) 1.8%, rgb(255, 111, 60) 100.5%);
     color: #1a1a1a;
     font-size: 20px;
+    font-weight: 600;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    border: 2px solid black;
+    border: 2px dashed black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
-    padding-bottom: 120px;   
+    padding: 10px 30px;
+    padding-bottom: 30px;
+    margin-bottom: 100px;
+    overflow-y: auto;
 }
 
+.cart-modal-container::-webkit-scrollbar {
+    width: 12px;
+}
+
+.cart-modal-container::-webkit-scrollbar-thumb {
+    background-color: var(--black); /* Change to your desired color */
+    border-radius: 6px;
+}
+
+.cart-modal-container::-webkit-scrollbar-track {
+    background-color: var(--orange);
+    border-radius: 6px;
+}
 .cart-modal-list-item {
+    background-color: var(--black);
+    color: var(--yellow);
+    padding: 0 8px;
+    margin: 8px 0;
+    border-radius: 20px;
     display: flex;
+    justify-content: flex-start;
     flex-direction: row;
     gap: 10px;
     
