--- a/react-dine-frontend/src/components/OrderModal.css
+++ b/react-dine-frontend/src/components/OrderModal.css
@@ -1,9 +1,9 @@
 .order-modal-bg {
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 60vw;
-    background: linear-gradient(68.6deg, rgba(252, 165, 241, 0.5) 1.8%, rgba(181, 255, 255, 0.5) 100.5%);
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(68.6deg, rgba(255, 111, 60, 0.8) 1.8%, rgba(255, 201, 60, 0.8) 100.5%);
     position: fixed;
     display: flex;
     justify-content: center;
@@ -12,14 +12,18 @@
 
 .order-modal-container {
     width: 400px;
-    height: 300px;
-    background: linear-gradient(68.6deg, rgb(252, 165, 241) 1.8%, rgb(181, 255, 255) 100.5%);
-
+    height: 200px;
+    background: linear-gradient(68.6deg, rgb(255, 201, 60) 1.8%, rgb(255, 111, 60) 100.5%);
+    color: #1a1a1a;
+    font-size: 20px;
+    font-weight: 600;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    border: 2px solid black;
+    border: 2px dashed black;
+    padding: 0px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 25px;   
+    margin-bottom: 80px;
+    overflow-y: auto;
 }
