--- a/react-dine-frontend/src/components/CartSheet.css
+++ b/react-dine-frontend/src/components/CartSheet.css
@@ -10,6 +10,11 @@ body {
     margin: 0 auto;
 }
 
+.cart-item-container h2 {
+    color: var(--black);
+    padding: 25px 0;
+}
+
 .cart-item-container ul {
     display: flex;
     justify-content: flex-start;
