--- a/react-dine-frontend/src/components/Dishes.css
+++ b/react-dine-frontend/src/components/Dishes.css
@@ -10,12 +10,11 @@
 .dish-card {
     position: relative;
     text-align: center;
-    max-width: 300px;
-    margin: 3%;
+    width: 280px;
+    margin: 3px;
     border: 2px solid black;
     border-radius: 10px;
     background-color: var(--dark);
-    
     transform-style: preserve-3d;
     transition: all 0.8s ease; 
 }
@@ -38,8 +37,15 @@
     transform: rotateY(180deg);
 }
 
-.dish-img-front {
-    max-width: 100%;
-    height: auto;
+.dish-img {
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
 }
 
+.dish-card-front-blur-load {
+    background-size: cover;
+    background-position: center;
+    height: 285px;
+}
