--- a/react-dine-frontend/src/components/Dishes.css
+++ b/react-dine-frontend/src/components/Dishes.css
@@ -1,10 +1,14 @@
 
-.dish-container {
+.dish-allcards-container {
     padding-top: 110px;
     position: relative;
     display: flex;
     justify-content:flex-start;
     flex-wrap: wrap;
+}
+
+.dish-singlecard-container:hover > .dish-card {
+    transform: rotateY(180deg);
 }
 
 .dish-card {
@@ -31,10 +35,6 @@
     top: 70px;
     padding: 0 5px;
     height: 100%;
-}
-
-.dish-card:hover {
-    transform: rotateY(180deg);
 }
 
 .dish-img {
