--- a/react-dine-frontend/src/components/Dishes.css
+++ b/react-dine-frontend/src/components/Dishes.css
@@ -2,7 +2,7 @@
     padding-top: 110px;
     position: relative;
     display: flex;
-    justify-content:flex-start;
+    justify-content:center;
     flex-wrap: wrap;
 }
 
