--- a/react-dine-frontend/src/components/OrderModal.css
+++ b/react-dine-frontend/src/components/OrderModal.css
@@ -11,8 +11,9 @@
 }
 
 .order-modal-container {
-    width: 400px;
-    height: 200px;
+    width: 40%;
+    height: 40%;
+    margin-top: 10%;
     background: linear-gradient(68.6deg, rgb(255, 201, 60) 1.8%, rgb(255, 111, 60) 100.5%);
     color: #1a1a1a;
     font-size: 20px;
@@ -21,9 +22,11 @@
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     border: 2px dashed black;
     padding: 0px 10px;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-bottom: 80px;
     overflow-y: auto;
 }
