--- a/react-dine-frontend/src/index.css
+++ b/react-dine-frontend/src/index.css
@@ -1,4 +1,7 @@
 :root {
+    min-width: 700px;
+
+
     color: #ffc93c;
     background-image: url(./images/project-bg-v5.jpg);
     background-size: 100% auto;
