--- a/react-dine-frontend/src/components/CartSheet.css
+++ b/react-dine-frontend/src/components/CartSheet.css
@@ -1,8 +1,3 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .cart-item-container {
     padding-top: 110px;
@@ -17,8 +12,9 @@ body {
 
 .cart-item-container ul {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
+    margin-right: 30px;
 }
 
 .cart-total {
@@ -77,4 +73,60 @@ body {
     box-shadow: var(--shadow-1);
 }
 
+@media (max-width: 600px) {
+
+    .cart-item-container {
+        padding-top: 80px;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+    
+    .cart-item-container ul {
+        display: flex;
+        justify-content: center;
+        margin-right: 30px;
+    }
+
+    .cart-item {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 8px;
+        margin: 3px;
+        padding: 0px;
+    }
+    
+    .cart-total {
+        padding: 10px 10px;
+        width: 40%;
+        font-size: 18px;
+    }
+    
+    .cart-count-buttons button {
+        margin: 4px;
+        font-size: 14px;
+    }
+    
+    .cartImg {
+        max-width: 70px;
+    }
+    
+    .cart-footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 50px;
+        padding-top: 20px;
+        font-size: 14px;
+        gap: 10px;
+    }
+
+    .cart-footer-checkout {
+        font-size: 17px;
+        background: var(--darklinear);
+        padding: 10px 35px;
+    }
+    
+}
 
