--- a/react-dine-frontend/src/components/CheckoutForm.css
+++ b/react-dine-frontend/src/components/CheckoutForm.css
@@ -65,3 +65,27 @@ textarea {
     resize: none;
 }
 
+@media (max-width: 600px) {
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 90px;
+        font-weight: 600;
+    }
+    
+    .checkout-summary {
+        padding: 10px;
+        margin-right: 30px;
+        margin-bottom: 20px;
+    }
+    
+    .checkout-form {
+        border-radius: 10px;
+        padding: 5px;
+        width: 300px;
+    }
+    
+}
+
