--- a/react-dine-frontend/src/components/OrderModal.css
+++ b/react-dine-frontend/src/components/OrderModal.css
@@ -34,3 +34,39 @@
 .order-modal-container button {
     box-shadow: var(--shadow-1);
 }
+
+@media (max-width: 600px) {
+
+    .order-modal-bg {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(68.6deg, rgba(255, 111, 60, 0.8) 1.8%, rgba(255, 201, 60, 0.8) 100.5%);
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .order-modal-container {
+        width: 70%;
+        height: 30%;
+        margin-top: 10%;
+        font-size: 20px;
+        font-weight: 600;
+        border-radius: 12px;
+        padding: 0px 10px;
+        padding-bottom: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 80px;
+        overflow-y: auto;
+    }
+    
+    .order-modal-container button {
+        
+    }
+}
