--- a/react-dine-frontend/src/components/CheckoutForm.css
+++ b/react-dine-frontend/src/components/CheckoutForm.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
+    justify-content: center;
     padding-top: 130px;
     font-weight: 600;
 }
@@ -71,7 +72,7 @@ textarea {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 90px;
+        padding-top: 80px;
         font-weight: 600;
     }
     
@@ -84,7 +85,12 @@ textarea {
     .checkout-form {
         border-radius: 10px;
         padding: 5px;
-        width: 300px;
+        width: 270px;
+        margin-bottom: 50px;
+    }
+    
+    .form-control label {
+        font-size: 14px;
     }
     
 }
